GMM_Main/src/objects/Education__c.object
<CustomObject>
    <fields>
        <fullName>Area_s_of_Study_Degree_Details__c</fullName>
        <label>Area(s) of Study/Degree Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>College_University__c</fullName>
        <inlineHelpText>CNCS staff uses the information in the following sections to determine eligibility to become a Review Participant, so be as comprehensive as possible.</inlineHelpText>
        <label>College/University</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Degree_Earned__c</fullName>
        <label>Degree Earned</label>
        <picklist>
            <picklistValues>
                <fullName>Associate Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <picklist>
            <picklistValues>
                <fullName>High School Diploma/GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associates Degree (AA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Degree (e.g. MA, PhD, MD, JD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical School/Apprenticeship/Vocational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Higher Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical/Vocational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Account__c</fullName>
        <label>User Account</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education</relationshipLabel>
        <relationshipName>Education</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Education</label>
    <nameField>
        <label>Education</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enter_Areas_of_Study_Degree_Details</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISPICKVAL(Highest_Level_of_Education__c, &quot;Associates Degree (AA)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;College Graduate&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Graduate Degree (e.g. MA, PhD, MD, JD)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Some College&quot;)), 
(ISBLANK(Area_s_of_Study_Degree_Details__c)) 
)</errorConditionFormula>
        <errorDisplayField>Area_s_of_Study_Degree_Details__c</errorDisplayField>
        <errorMessage>Please Enter &quot;Area(s) of Study/Degree Details&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Degree_Earned</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISPICKVAL(Highest_Level_of_Education__c, &quot;Associates Degree (AA)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;College Graduate&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Graduate Degree (e.g. MA, PhD, MD, JD)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Some College&quot;)), 
(ISPICKVAL(Degree_Earned__c,&apos;&apos;)) 
)</errorConditionFormula>
        <errorDisplayField>Degree_Earned__c</errorDisplayField>
        <errorMessage>Please Enter &quot;Degree Earned&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Education_History</fullName>
        <active>true</active>
        <description>If the &quot;Highest Level of Education&quot; contains &apos;Associates Degree, College Degree, Some College, Graduate Degree&apos; - Field in the Education History are required.</description>
        <errorConditionFormula>AND(OR( ISPICKVAL(Highest_Level_of_Education__c, &quot;Associates Degree (AA)&quot;),  
ISPICKVAL(Highest_Level_of_Education__c, &quot;College Graduate&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Graduate Degree (e.g. MA, PhD, MD, JD)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Some College&quot;)),
(ISBLANK (College_University__c)) 
)</errorConditionFormula>
        <errorDisplayField>College_University__c</errorDisplayField>
        <errorMessage>Please Enter a value for &quot;College/University&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_From_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISPICKVAL(Highest_Level_of_Education__c, &quot;Associates Degree (AA)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;College Graduate&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Graduate Degree (e.g. MA, PhD, MD, JD)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Some College&quot;)), 
(ISBLANK(From__c)) 
)</errorConditionFormula>
        <errorDisplayField>From__c</errorDisplayField>
        <errorMessage>Please Enter &quot;From&quot; date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Organization_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISPICKVAL(Highest_Level_of_Education__c, &quot;Associates Degree (AA)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;College Graduate&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Graduate Degree (e.g. MA, PhD, MD, JD)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Some College&quot;)), 
(ISPICKVAL(Organization_Type__c,&apos;&apos;)) 
)</errorConditionFormula>
        <errorDisplayField>Organization_Type__c</errorDisplayField>
        <errorMessage>Please Enter &quot;Organization Type&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_To_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISPICKVAL(Highest_Level_of_Education__c, &quot;Associates Degree (AA)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;College Graduate&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Graduate Degree (e.g. MA, PhD, MD, JD)&quot;), 
ISPICKVAL(Highest_Level_of_Education__c, &quot;Some College&quot;)), 
(ISBLANK(To__c)) 
)</errorConditionFormula>
        <errorDisplayField>To__c</errorDisplayField>
        <errorMessage>Please Enter &quot;To&quot; Date</errorMessage>
    </validationRules>
</CustomObject>